--- a/konga/package.json
+++ b/konga/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kongadmin",
-  "version": "0.8.8",
+  "version": "4.0.0",
   "description": "Kong admin GUI",
   "keywords": [
     "sails.js",
@@ -14,7 +14,7 @@
   "dependencies": {
     "@slack/client": "^3.14.0",
     "async": "1.5.0",
-    "barrels": "1.6.0",
+    "barrels": "^1.6.5",
     "bcryptjs": "2.3.0",
     "bluebird": "3.0.5",
     "bower": "^1.8.0",
@@ -22,10 +22,10 @@
     "ejs": "^2.5.6",
     "fs": "0.0.1-security",
     "google-auth-library": "^0.10.0",
-    "googleapis": "^14.1.0",
-    "grunt": "1.0.1",
+    "googleapis": "^33.0.0",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
+    "grunt-contrib-coffee": "^2.0.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "1.0.1",
@@ -33,12 +33,12 @@
     "grunt-contrib-less": "1.3.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sass": "^2.0.0",
-    "grunt-sync": "0.5.2",
+    "grunt-sync": "^0.8.0",
     "http-proxy": "^1.16.2",
-    "include-all": "^1.0.0",
+    "include-all": "^4.0.3",
     "ip": "^1.1.5",
     "jsonwebtoken": "5.4.1",
     "lodash": "^4.17.10",
@@ -55,14 +55,14 @@
     "passport": "0.3.0",
     "passport-local": "1.0.0",
     "randomstring": "^1.1.5",
-    "rc": "1.0.1",
+    "rc": "^1.2.8",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "sails": "~0.12.14",
-    "sails-disk": "^0.10.10",
+    "sails-disk": "^1.0.1",
     "sails-hook-validation": "0.4.6",
-    "sails-mongo": "^0.12.3",
-    "sails-mysql": "^0.11.5",
+    "sails-mongo": "^1.0.1",
+    "sails-mysql": "^1.0.0",
     "sails-postgresql": "^0.11.4",
     "sails-sqlserver": "^0.10.8",
     "sendmail": "^1.1.1",
